# OpenFrp-CrossPlatformLauncher

./: .gitignore  LICENSE  README.md  components.d.ts  index.html  macos.entitlements  package-lock.json  package.json  tsconfig.json  update-manifest.json  vite.config.ts
.github/workflows/: main.yml  release.yml
src/: App.vue  login.html  main.ts  vite-env.d.ts
src-tauri/: 2  Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: api_proxy.rs  argo_access.rs  lib.rs  main.rs  update.rs
src/assets/: authhelpimage.vue
src/assets/tianai/: enc.js
src/assets/tianai/styles/: tac-custom.css  tac.css
src/components/: CreateProxy.vue  FrpcInstance.vue  FrpcManager.vue  Home.vue  Info.vue  Login.vue  Network.vue  NodeStatus.vue.bak  ProxyList.vue  Settings.vue
src/components/CreateProxies/: Card.vue  index.vue  index.vue.bak  style.less
src/components/ManageProxies/: Edit.vue  GetConf.vue  Infomation.vue  Menu.vue  index.vue.bak  style.less
src/layouts/Header/: index.vue  style.less
src/layouts/Sidebar/: index.vue
src/requests/: hitokoto.ts
src/requests/argoAccess/: request.ts
src/requests/frpApi/: api2.ts  frpApiChangeProxy.ts  frpApiEditProxy.ts  frpApiForceOff.ts  frpApiForceOffAll.ts  frpApiGetAllGroups.ts  frpApiGetAvailableNode.ts  frpApiGetNodeConf.ts  frpApiGetNodeList.ts  frpApiGetNodeStatus.ts  frpApiGetSignInfo.ts  frpApiGetTrafficHistory.ts  frpApiGetUserInfo.ts  frpApiGetUserProxies.ts  frpApiNewProxy.ts  frpApiRefreshProxyStatus.ts  frpApiRemoveProxy.ts  frpApiResetToken.ts  frpApiUseCode.ts  frpApiUserSign.ts
src/requests/oauth/: getLoginUrl.ts  oauthCallback.ts
src/router/: index.ts
src/services/: logService.ts
src/stores/: linkTunnels.ts  theme.ts
src/types/: frpc.ts  index.d.ts  js-cookie.d.ts  update.ts
src/utils/: apiClient.ts  cookies.ts  linkHandler.ts  windowEffect.ts
typings/struct/: index.d.ts
