[package]
name = "openfrp_cpl"
version = "0.5.2"
description = "OpenFrp Cross Platform Launcher"
authors = ["云默安", "ZGIT"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "ofl_lite_tauri_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }
chrono = "0.4"

[dependencies]
tauri = { version = "2", features = [ "tray-icon" ] }
tauri-plugin-single-instance = { version = "2.0.0", features = ["deep-link"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.11", features = ["json"] }
zip = "0.6"
flate2 = "1.0"
tar = "0.4"
tokio = { version = "1.0", features = ["full"] }
dirs = "5.0"
tauri-plugin-notification = "2"
nix = "0.26"
tauri-plugin-process = "2"
single-instance = "0.3"
tauri-plugin-dialog = "2"
is_elevated = "0.1.2"
tauri-plugin-deep-link = "2"
tauri-plugin-http = "2"

# 将 winreg 移动到 Windows 特定依赖中
[target.'cfg(windows)'.dependencies]
winreg = "0.50"

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-autostart = "2"
tauri-plugin-single-instance = "2"
tauri-plugin-updater = "2"

[package.metadata.tauri.bundle.windows]
manifest = "app.manifest"

